backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blogapp-backend
  namespace: default
  labels:
    app: blogapp-backend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: blogapp-backend
  template:
    metadata:
      labels:
        app: blogapp-backend
    spec:
      containers:
        - name: backend
          image: 382170164329.dkr.ecr.ap-south-1.amazonaws.com/blogapp-backend:stage2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5000

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi

          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6

---

apiVersion: v1
kind: Service
metadata:
  name: blogapp-backend
  namespace: default
  labels:
    app: blogapp-backend
spec:
  type: ClusterIP
  selector:
    app: blogapp-backend
  ports:
    - name: http
      port: 5000
      targetPort: http
